introduced superstructure, started and kinda finished bindings, started and almost finished state machine logic